@@ -1,0 +1,2 @@
+# Copyright (c) 2010 gocept gmbh & co. kg
+# See also LICENSE.txt
