@@ -17,5 +17,6 @@
   <include package="zeit.cms" file="ftesting-securitypolicy.zcml" />
 
   <include package="zeit.ghost" />
+  <include package="zeit.ghost.browser" />
 
 </configure>
