@@ -8,6 +8,7 @@ zeit.cms changes
 - Removed assignment of UUIDs, this is handled by the DAV-Server now (#7366).
 - Added trackeback info to publish/rectract tasks (#7443).
 - Show UUID when there are duplication errors (#7247).
+- Allow "checkin" for ghosts (#7152).
 
 
 1.44.0 (2010-06-09)
